[package]
name = "easybreach"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
axum = "0.8.9"
tokio = { version = "1.50.0", features = ["full"]}
serde = "1.0.229"
serde_json = "1.0.151"
serde_derive = "1.0.229"
tracing = "0.1.44"
sha-1 = "0.10.1"
base16ct = { version = "0.3.0", features = ["alloc", "std"]}
structopt = "0.3.26"
easybreach_bloom = {path = "../easybreach_bloom"}
tower-http = { version = "0.6.11", features = ["cors"] }
http = "1.4.2"
